Adicionado todos controller e exceptions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.datasource.url=jdbc:postgresql://db-votacao.c9lmci4badcl.us-east-1.rds.amazonaws.com
+# Configuração do banco de dados PostgreSQL
+spring.datasource.url=jdbc:postgresql://database-1.c9lmci4badcl.us-east-1.rds.amazonaws.com/dbvotacao
 spring.datasource.username=postgres
 spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Configuração do Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
