--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,9 +3,9 @@ client:
     queue-name: ${CLIENT_CSM_QUEUE_NAME:resultado-votacao}
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/postgres
+    url: jdbc:postgresql://containers-us-west-155.railway.app:6215/railway
     username: postgres
-    password: postgres
+    password: f3nmjFXaAxRuD4pAMEvj
 
   jpa:
     hibernate:
